--- a/app/src/main/res/layout/settings_page_fragment.xml
+++ b/app/src/main/res/layout/settings_page_fragment.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mainPage.MainPageFragment">
-
+    tools:context=".settingsPage.SettingsPageFragment">
 
     <TextView
         android:layout_width="match_parent"
