--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,7 +7,22 @@
 
     <fragment
         android:id="@+id/mainPageFragment"
-        android:name="me.fernandesleite.exonpodcast.mainpage.MainPageFragment"
-        android:label="main_page_fragment"
+        android:name="me.fernandesleite.exonpodcast.mainPage.MainPageFragment"
+        android:label="@string/podcasts"
         tools:layout="@layout/main_page_fragment" />
+    <fragment
+        android:id="@+id/discoverPageFragment"
+        android:name="me.fernandesleite.exonpodcast.discoverPage.DiscoverPageFragment"
+        android:label="@string/discover"
+        tools:layout="@layout/discover_page_fragment" />
+    <fragment
+        android:id="@+id/downloadedPageFragment"
+        android:name="me.fernandesleite.exonpodcast.downloadedPage.DownloadedPageFragment"
+        android:label="@string/downloaded"
+        tools:layout="@layout/downloaded_page_fragment" />
+    <fragment
+        android:id="@+id/settingsPageFragment"
+        android:name="me.fernandesleite.exonpodcast.settingsPage.SettingsPageFragment"
+        android:label="@string/settings"
+        tools:layout="@layout/settings_page_fragment" />
 </navigation>
