--- a/app/src/main/res/layout/discover_page_fragment.xml
+++ b/app/src/main/res/layout/discover_page_fragment.xml
@@ -27,20 +27,35 @@
                 android:id="@+id/search_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:focusable="false"
+                app:queryBackground="@android:color/transparent"
                 app:defaultQueryHint="Search for podcast"
                 app:iconifiedByDefault="false"/>
         </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/genre_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:list_genres="@{viewModel.genres}"/>
+        </androidx.cardview.widget.CardView>
+
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_big"
+            android:layout_marginVertical="16dp"
             android:text="Top Podcasts"
             android:textColor="#000000"
-            android:textSize="20sp"/>
+            android:textSize="24sp"/>
 
         <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <androidx.recyclerview.widget.RecyclerView
